# zimcli

./: .clang-format  .gitignore  CMakeLists.txt  compile.md  readme.md
cmake/: helper.cmake  macro.cmake
lib/zim/linux/include/: ZIM.h  ZIMDefines.h  ZIMEventHandler.h
lib/zim/linux/include/internal/: ZIMBridge.h  ZIMConverter.h
lib/zim/mac/: VERSION.txt
lib/zim/mac/ZIM.xcframework/: Info.plist
lib/zim/mac/ZIM.xcframework/macos-arm64_x86_64/Headers/: ZIMErrorCode.h
lib/zim/mac/ZIM.xcframework/macos-arm64_x86_64/Headers/internal/: ZIMImpl.h  ZIMInternal.h
lib/zim/mac/ZIM.xcframework/macos-arm64_x86_64/Headers/internal/include/: zim.h  zim_defines.h  zim_error_code.h
lib/zim/win/x64/include/: ZIM.h  ZIMDefines.h  ZIMErrorCode.h  ZIMEventHandler.h
lib/zim/win/x64/include/internal/: ZIMBridge.h  ZIMConverter.h  ZIMImpl.h  ZIMInternal.h
lib/zim/win/x64/include/internal/include/: zim.h  zim_defines.h  zim_error_code.h
src/: main.cpp  main.h
